<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingActivity">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/hello_world"
        app:elevation="0dp"
        app:borderWidth="0dp"
        android:tint="@color/white"
        app:backgroundTint="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        app:tint="@color/dark_grey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:paddingTop="70dp"
        android:paddingBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/mainAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="75dp"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/default_avatar"
            app:civ_border_color="@color/border"
            app:civ_border_width="3dp"
            app:civ_circle_color="@color/border"
            app:civ_shadow="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/name_input"
            android:layout_marginBottom="10dp"
            app:placeholderText="@string/name_placeholder"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nim_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/nim_input"
            android:layout_marginBottom="20dp"
            app:placeholderText="@string/nim_placeholder"
            android:hint="@string/nim">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/nim_input"
                android:inputType="text"
                android:layout_height="wrap_content" />


        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/save_changes"
        android:backgroundTint="@color/blue"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>