<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="70dp"
        android:paddingBottom="40dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/mainAvatar"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_marginBottom="30dp"
            app:civ_circle_color="@color/border"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/default_avatar"
            app:civ_border_color="@color/border"
            app:civ_border_width="3dp"
            app:civ_shadow="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mainNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/hello_world"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/mainNimText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/hello_world"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />



        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingVertical="30dp"
            android:paddingHorizontal="40dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/weekFiveButton"
                android:layout_width="match_parent"
                android:layout_marginVertical="5dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="57dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/week_five_button"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/weekSevenButton"
                android:layout_width="match_parent"
                android:layout_marginVertical="5dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="57dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/week_seven_button"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/weekNineButton"
                android:layout_width="match_parent"
                android:layout_marginVertical="5dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="57dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/week_nine_button"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/weekTenButton"
                android:layout_width="match_parent"
                android:layout_marginVertical="5dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="57dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/week_ten_button"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/weekSixteenButton"
                android:layout_width="match_parent"
                android:layout_marginVertical="5dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="57dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/week_sixteen_button"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>